changes added in header page

--- a/edm/src/app/auth/login/login.component.scss
+++ b/edm/src/app/auth/login/login.component.scss
@@ -1,7 +1,7 @@
 .authentication {
     display: table;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 123px);
 }
 .authentication_sec {
     display: table-cell;
@@ -95,6 +95,12 @@
 }
 
 // ********** Responsive **********
+
+@media screen and (max-width: 800px) {
+    .authentication {
+        height: calc(100vh - 74px);
+    }
+}
 
 @media screen and (max-width: 400px) {
     .facebook_btn, .google_btn {
