--- a/edm/src/app/theme/client/header/header.component.html
+++ b/edm/src/app/theme/client/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="open_mobile_menu">
             <img src="../../../../assets/images/navigation_icon.svg">
         </div>
-        <div class="mobile_menu menu_open_animation">
+        <div class="mobile_menu menu_open_animation"> <!-- "menu_close_animation" Class while Closing menu panel -->
             <div class="mobile_project_logo">
                 <a (click)="redirectUrl('home')" >
                     <img src="../../../../assets/images/logo.PNG" alt="EDM Logo" />
@@ -21,6 +21,15 @@
                 </p>
                 <p>
                     <a href="#" target="_blank">Services</a>
+                </p>
+                <p>
+                    <a href="#" target="_blank">Logout</a>
+                </p>
+                <p (click)="redirectUrl('login')">
+                    <a href="#" target="_blank">Sign In</a>
+                </p>
+                <p>
+                    <a href="#" target="_blank">Sign Up</a>
                 </p>
             </div>
         </div>
@@ -49,6 +58,11 @@
             <div class="cart_area" title="My Cart">
                 <span>3</span>
                 <img src="../../../../assets/images/cart.svg" alt="Cart Image">
+            </div>
+        </div>
+        <div class="user_profile">
+            <div class="user_profile_img">
+                <img src="https://pixinvent.com/materialize-material-design-admin-template/app-assets/images/user/12.jpg" />
             </div>
         </div>
         <div class="signin_btn">
