--- a/edm/src/app/widgets/bannerSlider/bannerSlider.component.html
+++ b/edm/src/app/widgets/bannerSlider/bannerSlider.component.html
@@ -1,13 +1,7 @@
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-        <div class="swiper-slide">
-            Swiper slide content
+<swiper class="swiper-container" [config]="config">
+    <div *ngFor="let slide of slides" class="swiper-slide">
+        <div>
+            {{slide}}
         </div>
     </div>
-
-    <div class="swiper-scrollbar"></div>
-    <div class="swiper-pagination"></div>
-
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-</div>
+</swiper>
