--- a/edm/src/app/home/home.component.html
+++ b/edm/src/app/home/home.component.html
@@ -1,1 +1,3 @@
 <app-bannerSlider></app-bannerSlider>
+<app-featuredProductSlider></app-featuredProductSlider>
+<app-producerSlider></app-producerSlider>
