home page design added (Incomplete)

--- a/edm/src/app/home/home.component.html
+++ b/edm/src/app/home/home.component.html
@@ -1,3 +1,157 @@
-<app-bannerSlider></app-bannerSlider>
+<!-- <app-bannerSlider></app-bannerSlider>
 <app-featuredProductSlider></app-featuredProductSlider>
-<app-producerSlider></app-producerSlider>
+<app-producerSlider></app-producerSlider> -->
+
+<div class="hp_sections hp_banner_section">
+    <div class="search_track_sec">
+        <div class="serch_inner_sec">
+            <h2>Find The Perfect Service For Your Next Hit</h2>
+            <div class="search_track">
+                <img src="../../assets/images/search.svg"/>
+                <input type="text" name="searchtrack" />
+                <a class="global_btn primary_btn">
+                    <span>SEARCH</span>
+                </a>
+            </div>
+            <div class="popular_tags_section">
+                <h2>Popular:</h2>
+                <p>Custom Track</p>
+                <p>Artist Branding</p>
+                <p>Dummy Track</p>
+                <p>Custom Track</p>
+                <p>Artist Branding</p>
+                <p>Dummy Track</p>
+                <p>Custom Track</p>
+                <p>Artist Branding</p>
+                <p>Dummy Track</p>
+                <p>Custom Track</p>
+                <p>Artist Branding</p>
+                <p>Dummy Track</p>
+            </div>
+        </div>
+    </div>
+    <div class="home_banner_sec">
+        <div class="banner_cross_part"></div>
+        <img src="../../assets/images/slider.jpg" style="width: 100%;">
+    </div>
+</div>
+
+<div class="hp_sections">
+    <h2 class="hp_heading">
+        Featured Track
+    </h2>
+</div>
+
+<div class="hp_sections hp_vedio_section">
+    <div class="vedio_content">
+        <h2 class="hp_heading left_border">
+            Custom Track With Dope Track
+        </h2>
+        <ul class="vedio_steps">
+            <li>
+                <i>1</i>
+                <span>Describe your future or Stucked project.</span>
+            </li>
+            <li>
+                <i>2</i>
+                <span>Get free consultation from our top notch dope producers.</span>
+            </li>
+            <li>
+                <i>3</i>
+                <span>Select the producer you want to work with.</span>
+            </li>
+            <li>
+                <i>4</i>
+                <span>Complete you next hit banger in within 10 days.</span>
+            </li>
+        </ul>
+    </div>
+    <div class="play_vedio">
+        <img src="../../assets/images/slider.jpg" style="width: 100%;">
+    </div>
+</div>
+
+<div class="hp_sections hp_vedio_section">
+    <h2 class="hp_heading">
+        Explore Artist Branding
+    </h2>
+    <div class="hp_block_section">
+        <div class="branding_sec">
+            <div class="branding_data">
+                <img src="../../assets/images/logo_designing.jpg">
+                <p>Logo Designing</p>
+            </div>
+        </div>
+        <div class="branding_sec">
+            <div class="branding_data">
+                <img src="../../assets/images/website_designing.jpg">
+                <p>Website Designing</p>
+            </div>
+        </div>
+        <div class="branding_sec">
+            <div class="branding_data">
+                <img src="../../assets/images/album_art.jpg">
+                <p>Album Art</p>
+            </div>
+        </div>
+        <div class="branding_sec">
+            <div class="branding_data">
+                <img src="../../assets/images/artist_illustration.jpg">
+                <p>Artist Illustration</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="hp_sections">
+    <h2 class="hp_heading">
+        Get Inspired by Top Notch Producers
+    </h2>
+</div>
+
+<div class="hp_sections">
+    <h2 class="hp_heading">
+        Latest News & Guides
+    </h2>
+    <div class="hp_block_section">
+        <div class="news_sec">
+            <div class="news_data">
+                <img src="../../assets/images/blog1.jpg">
+                <div class="news_content">
+                    <h2>Dummy Short Heading</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="global_btn icon_btn primary_btn">
+                        <span>Read More</span>
+                        <span class="double_right_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="news_sec">
+            <div class="news_data">
+                <img src="../../assets/images/blog2.jpg">
+                <div class="news_content">
+                    <h2>Dummy Short Heading</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="global_btn icon_btn primary_btn">
+                        <span>Read More</span>
+                        <span class="double_right_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="news_sec">
+            <div class="news_data">
+                <img src="../../assets/images/blog3.jpg">
+                <div class="news_content">
+                    <h2>Dummy Short Heading</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="global_btn icon_btn primary_btn">
+                        <span>Read More</span>
+                        <span class="double_right_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
