--- a/edm/src/app/auth/signup/signup.component.html
+++ b/edm/src/app/auth/signup/signup.component.html
@@ -4,38 +4,62 @@
             <h2>
                 Sign Up
             </h2>
-            <form>
+            <form #formSignUp="ngForm">
                 <div class="form_group">
                     <div class="form_area icon_form_group">
-                        <input type="text" name="username" placeholder="Enter Your Name"/>
+                        <input type="text" [(ngModel)]="_userModel.FullName" name="fullname" #fullname="ngModel"
+                            minlength="5" maxlength="255" placeholder="Enter Your Name" required />
                         <span class="input_icon user_icon"></span>
                     </div>
-                    <p class="error_msg">This field is Required</p>
+                    <div *ngIf="(fullname.invalid && (fullname.dirty || fullname.touched)) || submitted" class="error_msg">
+                        <span class="error_msg" *ngIf="fullname.errors?.required">This
+                            field is Required</span>
+                    </div>
                 </div>
                 <div class="form_group">
                     <div class="form_area icon_form_group">
-                        <input type="email" name="email" placeholder="Enter Your Eamil"/>
+                        <input type="email" name="email" placeholder="Enter Your Eamil"
+                            pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" [(ngModel)]="_userModel.Email"
+                            #email="ngModel" maxlength="255" required />
                         <span class="input_icon email_icon"></span>
                     </div>
-                    <p class="error_msg">This field is Required</p>
+                    <div *ngIf="(email.invalid && (email.dirty || email.touched)) || submitted" class="error_msg">
+                        <span class="error_msg" *ngIf="email.errors?.required && submitted">This field
+                            is Required</span>
+                        <span class="error_msg" *ngIf="email.errors?.pattern && submitted">Enter valid email
+                            id</span>
+                    </div>
+
                 </div>
                 <div class="form_group">
                     <div class="form_area icon_form_group">
-                        <select>
-                            <option selected disabled>Enter Your Role</option>
+                        <select name="role" [(ngModel)]="_userModel.Role" #role="ngModel" required>
+                            <option>Enter Your Role</option>
                             <option>I am Producer</option>
                             <option>I am Buyer</option>
                         </select>
                         <span class="input_icon dropdown_icon"></span>
                     </div>
-                    <p class="error_msg">This field is Required</p>
+                    <div *ngIf="(role.invalid && (role.dirty || role.touched)) || submitted" class="error_msg">
+                        <span class="error_msg" *ngIf="role.errors?.required">This
+                            field is Required</span>
+                    </div>
                 </div>
                 <div class="form_group">
                     <div class="form_area icon_form_group">
-                        <input type="password" name="password" placeholder="Password"/>
+                        <input type="password" name="password" placeholder="Password" (keypress)="numberOnly($event)"
+                            [(ngModel)]="_userModel.Password" #password="ngModel" required minlength="6"
+                            maxlength="6" />
                         <span class="input_icon password_icon"></span>
                     </div>
-                    <p class="error_msg">This field is Required</p>
+                    <div *ngIf="(password.invalid && (password.dirty || password.touched)) || submitted"
+                        class="error_msg">
+                        <span class="error_msg" *ngIf="password.errors?.required">This
+                            field is Required</span>
+                        <span class="error_msg"
+                            *ngIf="password.errors?.minlength || password.errors?.maxlength">Password must be 6
+                            digit</span>
+                    </div>
                 </div>
                 <div class="save_pwd_sec">
                     <p class="remember_me">
@@ -46,7 +70,7 @@
                     </p>
                 </div>
                 <div class="button_group">
-                    <a class="global_btn primary_btn">
+                    <a (click)="register(formSignUp)" class="global_btn primary_btn">
                         <span>Sign Up</span>
                     </a>
                     <a (click)="signIn()" class="global_btn secondary_btn">
