home page responsive added

--- a/edm/src/app/home/home.component.html
+++ b/edm/src/app/home/home.component.html
@@ -3,6 +3,10 @@
 <app-producerSlider></app-producerSlider> -->
 
 <div class="hp_sections hp_banner_section">
+    <div class="home_banner_sec">
+        <div class="banner_cross_part"></div>
+        <img src="../../assets/images/slider.jpg" style="width: 100%;">
+    </div>
     <div class="search_track_sec">
         <div class="serch_inner_sec">
             <h2>Find The Perfect Service For Your Next Hit</h2>
@@ -30,17 +34,13 @@
             </div>
         </div>
     </div>
-    <div class="home_banner_sec">
-        <div class="banner_cross_part"></div>
-        <img src="../../assets/images/slider.jpg" style="width: 100%;">
-    </div>
 </div>
 
-<div class="hp_sections">
+<!-- <div class="hp_sections">
     <h2 class="hp_heading">
         Featured Track
     </h2>
-</div>
+</div> -->
 
 <div class="hp_sections hp_vedio_section">
     <div class="vedio_content">
@@ -71,7 +71,7 @@
     </div>
 </div>
 
-<div class="hp_sections hp_vedio_section">
+<div class="hp_sections">
     <h2 class="hp_heading">
         Explore Artist Branding
     </h2>
@@ -103,11 +103,11 @@
     </div>
 </div>
 
-<div class="hp_sections">
+<!-- <div class="hp_sections">
     <h2 class="hp_heading">
         Get Inspired by Top Notch Producers
     </h2>
-</div>
+</div> -->
 
 <div class="hp_sections">
     <h2 class="hp_heading">
@@ -154,4 +154,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>  
