--- a/edm/src/app/theme/client/header/header.component.scss
+++ b/edm/src/app/theme/client/header/header.component.scss
@@ -78,7 +78,7 @@
     width: 250px;
     overflow: auto;
     box-shadow: -3px 0px 8px #bbbbbb;
-    // display: none;
+    display: none;
 }
 .mobile_project_logo img {
     cursor: pointer;
