--- a/edm/src/app/home/home.component.scss
+++ b/edm/src/app/home/home.component.scss
@@ -5,6 +5,9 @@
 .search_track_sec, .home_banner_sec {
     display: table-cell;
 }
+// .home_banner_sec {
+//     float: right;
+// }
 .search_track img {
     width: 25px;
     position: absolute;
@@ -20,15 +23,17 @@
     vertical-align: middle;
     text-align: center;
     width: 43%;
+    // float: left;
 }
 .serch_inner_sec {
-    width: 69%;
+    width: 80%;
     margin: 0 auto;
     text-align: left;
 }
 .serch_inner_sec > h2 {
     margin-bottom: 20px;
     font-weight: bold;
+    font-size: 35px;
 }
 .search_track {
     width: 100%;
@@ -68,6 +73,8 @@
 }
 .hp_sections {
     margin-bottom: 70px;
+    display: inline-block;
+    width: 100%;
 }
 .hp_heading {
     text-align: center;
@@ -104,6 +111,7 @@
 }
 .vedio_steps {
     list-style: none;
+    margin: 0;
 }
 .vedio_steps li {
     margin-bottom: 15px;
@@ -127,6 +135,7 @@
     width: calc(100% - 50px);
     vertical-align: top;
     padding: 3px 0 0 0;
+    font-size: 16px;
 }
 .hp_block_section {
     display: inline-block;
@@ -154,11 +163,6 @@
     text-align: center;
     margin: 0;
 }
-.branding_data:hover {
-    box-shadow: 0 0 7px #dadada;
-    -webkit-box-shadow: 0 0 7px #dadada;
-    -moz-box-shadow: 0 0 7px #dadada;
-}
 .news_sec {
     width: 33.33%;
     display: inline-block;
@@ -172,10 +176,15 @@
     cursor: pointer;
     transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out, border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
 }
+.branding_data:hover {
+    box-shadow: 0 0 7px #bfbfbf;
+    -webkit-box-shadow: 0 0 7px #bfbfbf;
+    -moz-box-shadow: 0 0 7px #bfbfbf;
+}
 .news_data:hover {
-    box-shadow: 0 0 7px #dadada;
-    -webkit-box-shadow: 0 0 7px #dadada;
-    -moz-box-shadow: 0 0 7px #dadada;
+    box-shadow: 0 0 7px #bfbfbf;
+    -webkit-box-shadow: 0 0 7px #bfbfbf;
+    -moz-box-shadow: 0 0 7px #bfbfbf;
 }
 .news_data:hover .news_content .global_btn {
     display: inline-block;
@@ -209,4 +218,167 @@
 }
 .news_content .btn_icon {
     width: 13px;
+}
+
+/* ********** Responsive ********** */
+
+@media screen and (max-width: 1200px) {
+    .hp_heading {
+        font-size: 27px;
+        margin-bottom: 40px;
+    }
+    .hp_heading:before {
+        width: 140px;
+    }
+    .hp_sections {
+        margin-bottom: 50px;
+    }
+    .serch_inner_sec > h2 {
+        font-size: 27px;
+    }
+    .vedio_steps li span {
+        padding: 4px 0 0 0;
+        font-size: 14px;
+    }
+    .vedio_steps li i {
+        width: 27px;
+        height: 27px;
+        line-height: 23px;
+        font-size: 14px;
+    }
+    .branding_data p {
+        padding: 12px 5px;
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .search_track_sec, .home_banner_sec, .vedio_content, .play_vedio {
+        display: inline-block;
+        width: 100%;
+    }
+    .home_banner_sec, .search_track_sec, .play_vedio, .vedio_content {
+        float: none;
+    }
+    .serch_inner_sec {
+        width: 100%;
+    }
+    .search_track_sec {
+        padding: 50px;
+    }
+    .hp_banner_section {
+        margin-bottom: 0 !important;
+    }
+    .search_track {
+        width: 100%;
+    }
+    .vedio_content {
+        padding: 0 50px 50px 50px;
+    }
+    .left_border {
+        text-align: center !important;
+    }
+    .left_border::before {
+        margin: 0 auto !important;
+    }
+    .branding_sec {
+        width: 50%;
+        padding: 20px;
+    }
+    .news_sec {
+        width: 50%;
+        padding: 20px;
+        min-height: auto;
+    }
+    .news_content .global_btn {
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .search_track {
+        max-width: 500px;
+    }
+    .search_track_sec {
+        padding: 40px 30px;
+    }
+    .hp_sections {
+        margin-bottom: 40px;
+    }
+    .vedio_content {
+        padding: 0 30px 40px 30px;
+    }
+    .hp_heading {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    .hp_heading:before {
+        width: 120px;
+    }
+    .hp_block_section {
+        padding: 0 20px;
+    }
+    .branding_sec, .news_sec {
+        padding: 10px;
+    }
+    .branding_data p {
+        padding: 10px 5px;
+        font-size: 15px;
+    }
+    .serch_inner_sec > h2 {
+        font-size: 20px;
+    }
+    .popular_tags_section h2 {
+        font-size: 13px;
+        margin: 0 5px 5px 0;
+    }
+    .popular_tags_section p {
+        font-size: 10px;
+        margin: 0 5px 5px 0;
+    }
+    .search_track .global_btn {
+        padding: 8px 20px;
+    }
+    .search_track img {
+        width: 19px;
+    }
+    .search_track input {
+        padding: 9px 9px 9px 35px;
+        font-size: 13px;
+    }
+    .serch_inner_sec > h2 {
+        margin-bottom: 15px;
+    }
+    .branding_data, .news_data {
+        box-shadow: 0 0 7px #bfbfbf;
+        -webkit-box-shadow: 0 0 7px #bfbfbf;
+        -moz-box-shadow: 0 0 7px #bfbfbf;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .hp_block_section {
+        padding: 0 10px;
+    }
+    .vedio_steps li {
+        margin-bottom: 10px;
+    }
+    .search_track_sec {
+        padding: 30px 20px;
+    }
+    .vedio_content {
+        padding: 0 20px 30px 20px;
+    }
+    .hp_sections {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 375px) {
+    .branding_sec, .news_sec {
+        width: 100%;
+    }
+    .vedio_steps li span {
+        padding: 3px 0 0 0;
+    }
 }
