--- a/edm/src/app/home/home.component.html
+++ b/edm/src/app/home/home.component.html
@@ -5,13 +5,14 @@
 <div class="hp_sections hp_banner_section">
     <div class="home_banner_sec">
         <div class="banner_cross_part"></div>
-        <img src="../../assets/images/slider.jpg" style="width: 100%;">
+        <app-bannerSlider></app-bannerSlider>
+
     </div>
     <div class="search_track_sec">
         <div class="serch_inner_sec">
             <h2>Find The Perfect Service For Your Next Hit</h2>
             <div class="search_track">
-                <img src="../../assets/images/search.svg"/>
+                <img src="../../assets/images/search.svg" />
                 <input type="text" name="searchtrack" />
                 <a class="global_btn primary_btn">
                     <span>SEARCH</span>
@@ -36,11 +37,12 @@
     </div>
 </div>
 
-<!-- <div class="hp_sections">
+<div class="hp_sections">
     <h2 class="hp_heading">
         Featured Track
     </h2>
-</div> -->
+    <app-featuredProductSlider></app-featuredProductSlider>
+</div>
 
 <div class="hp_sections hp_vedio_section">
     <div class="vedio_content">
@@ -103,11 +105,12 @@
     </div>
 </div>
 
-<!-- <div class="hp_sections">
+<div class="hp_sections">
     <h2 class="hp_heading">
         Get Inspired by Top Notch Producers
     </h2>
-</div> -->
+    <app-producerSlider></app-producerSlider>
+</div>
 
 <div class="hp_sections">
     <h2 class="hp_heading">
@@ -154,4 +157,4 @@
             </div>
         </div>
     </div>
-</div>  
+</div>
