--- a/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.html
+++ b/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.html
@@ -1,7 +1,8 @@
 <swiper class="featuredSlider-container" [config]="config">
     <div *ngFor="let slide of slides" class="swiper-slide">
         <div>
-            {{slide}}
+            <img src=" ../../../../../assets/images/album_art.jpg">
+            <span>Product Title</span>
         </div>
     </div>
 </swiper>
