Update slider code

--- a/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.html
+++ b/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.html
@@ -3,6 +3,7 @@
         <div>
             <img src=" ../../../../../assets/images/album_art.jpg">
             <span>Product Title</span>
+            <span>Gener</span>
         </div>
     </div>
 </swiper>
