--- a/edm/src/app/widgets/producerSlider/producerSlider.component.html
+++ b/edm/src/app/widgets/producerSlider/producerSlider.component.html
@@ -1,7 +1,9 @@
 <swiper class="featuredSlider-container" [config]="config">
     <div *ngFor="let slide of slides" class="swiper-slide">
         <div>
-            {{slide}}
+            <img src=" ../../../../../assets/images/album_art.jpg">
+            <span>PRoducer Name</span>
+            <span>I will be your dope musice producer</span>
         </div>
     </div>
 </swiper>
