--- a/edm/src/app/widgets/bannerSlider/bannerSlider.component.html
+++ b/edm/src/app/widgets/bannerSlider/bannerSlider.component.html
@@ -1,7 +1,7 @@
 <swiper class="swiper-container" [config]="config">
     <div *ngFor="let slide of slides" class="swiper-slide">
         <div>
-            <img src="../../assets/images/slider.jpg">
+            <img src="../../assets/images/slider.jpg" style="width: 100%;">
         </div>
     </div>
 </swiper>
