--- a/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.html
+++ b/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.html
@@ -1,9 +1,28 @@
-<swiper class="featuredSlider-container" [config]="config">
+<swiper class="product_slider" [config]="config">
     <div *ngFor="let slide of slides" class="swiper-slide">
-        <div>
-            <img src=" ../../../../../assets/images/album_art.jpg">
-            <span>Product Title</span>
-            <span>Gener</span>
+        <div class="slider_product">
+            <div class="product_img">
+                <img src=" ../../../../../assets/images/product_thumbnail.jpg" class="product_thumbnail">
+                <!-- <img src=" ../../../../../assets/images/product_thumbnail.jpg" class="product_thumbnail"> -->
+                <div class="product_upper_layer">
+                    <img src="../../../assets/images/play_video.svg" title="Play" />
+                    <p class="product_name">ZAPPIER</p>
+                    <p class="product_bass">Future Bass</p>
+                </div>
+            </div>
+            <div class="product_details">
+                <div class="left_details">
+                    <img src="../../../assets/images/blank_heart.svg" class="blank_heart" title="Add to Favorites"/>
+                    <!-- <img src="../../../assets/images/fill_heart.svg" class="blank_heart"/> -->
+                    <img src="../../../assets/images/read_more.svg" class="green_heart" title="Read More"/>
+                </div>
+                <div class="right_details">
+                    <a class="global_btn icon_btn primary_btn" title="Add To Cart">
+                        <span>&#36;999</span>
+                        <span class="add_to_cart_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 </swiper>
