--- a/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.scss
+++ b/edm/src/app/widgets/featuredProductSlider/featuredProductSlider.component.scss
@@ -1,17 +1,143 @@
-
-.featuredSlider-container {
-    // position: absolute;
-    // top: 0;
-    height: 500px;
-    width: 100%;
-  }
-  
-  .swiper-slide {
-    color: #aaa;
-    background-color: #eee;
-  }
-  
-  .swiper-slide-active {
-    color: #fff;
-    background-color: #aaa;
-  }
+.slider_product {
+	cursor: pointer;
+}
+.product_details {
+	background: #F8F8F8;
+	padding: 10px;
+	display: inline-block;
+	width: 100%;
+	border-radius: 0 0 10px 10px;
+}
+.left_details {
+	display: inline-block;
+	vertical-align: middle;
+	background: white;
+	border-radius: 3px;
+}
+.left_details img {
+	width: 33px;
+	height: auto;
+	padding: 2px 7px;
+	border-right: 1px solid #CFCFCF;
+	cursor: pointer;
+}
+.left_details img:last-child {
+	border-right: 0;
+}
+.right_details {
+	width: auto;
+	float: right;
+}
+.right_details .global_btn {
+	margin: 0;
+	padding: 3px 10px;
+	font-size: 18px;
+}
+.product_thumbnail {
+	width: 100%;
+	border-radius: 10px;
+}
+.product_img {
+    position: relative;
+}
+.product_upper_layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 50%;
+    background: black;
+    color: white;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+    border-top: 2px solid white;
+}
+.product_upper_layer img {
+    width: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.product_name {
+    font-size: 12px;
+	margin: 30px 0 0 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 0 10px;
+}
+.product_bass {
+    font-size: 12px;
+	margin: 10px 0 0 0;
+    color: #05c38f;
+    font-weight: bold;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 0 10px;
+}
+.slider_buttons {
+	width: 100%;
+}
+.follow_icon {
+    width: 13px;
+    height: 17px;
+}
+.slider_buttons .global_btn:last-child {
+    float: right;
+}
+.slider_buttons .global_btn {
+    padding: 4px 10px;
+}
+.producer_info {
+    font-size: 11px;
+    color: white;
+    margin: 10px 0 0 0;
+    padding: 0 10px;
+    line-height: 12px;
+}
+.producer_profile_photo:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #05c38f;
+    position: absolute;
+    right: 1px;
+    border: 2px solid white;
+    top: 0px;
+    display: inline-block;
+    border-radius: 100%;
+}
+.producer_profile_photo {
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+    position: absolute;
+    top: -25px;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.producer_upper_layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 50%;
+    background: black;
+    color: white;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+    border-top: 2px solid white;
+}
+.producer_profile_photo img {
+    background: white;
+    padding: 2px;
+    border: 2px solid #05c38f;
+    width: 45px;
+    height: 45px;
+    border-radius: 100%;
+}
