product + product details + 404 page reponsive designs added

--- a/edm/src/app/home/home.component.html
+++ b/edm/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <app-featuredProductSlider></app-featuredProductSlider>
 <app-producerSlider></app-producerSlider> -->
 
-<div class="hp_sections hp_banner_section">
+<div class="global_sections hp_banner_section">
     <div class="home_banner_sec mobile_banner">
         <div class="banner_cross_part"></div>
         <app-bannerSlider></app-bannerSlider>
@@ -30,18 +30,18 @@
     </div>
 </div>
 
-<div class="hp_sections">
-    <h2 class="hp_heading">
+<div class="global_sections">
+    <h2 class="global_heading">
         Featured Track
     </h2>
-    <div class="hp_slider">
+    <div class="global_slider">
         <app-featuredProductSlider></app-featuredProductSlider>
     </div>
 </div>
 
-<div class="hp_sections hp_vedio_section">
+<div class="global_sections hp_vedio_section">
     <div class="vedio_content">
-        <h2 class="hp_heading left_border">
+        <h2 class="global_heading global_heading_left_border">
             Custom Track With Dope Track
         </h2>
         <ul class="vedio_steps">
@@ -68,8 +68,8 @@
     </div>
 </div>
 
-<div class="hp_sections">
-    <h2 class="hp_heading">
+<div class="global_sections">
+    <h2 class="global_heading">
         Explore Artist Branding
     </h2>
     <div class="hp_block_section">
@@ -100,17 +100,17 @@
     </div>
 </div>
 
-<div class="hp_sections">
-    <h2 class="hp_heading">
+<div class="global_sections">
+    <h2 class="global_heading">
         Get Inspired by Top Notch Producers
     </h2>
-    <div class="hp_slider">
+    <div class="global_slider">
         <app-producerSlider></app-producerSlider>
     </div>
 </div>
 
-<div class="hp_sections">
-    <h2 class="hp_heading">
+<div class="global_sections">
+    <h2 class="global_heading">
         Latest News & Guides
     </h2>
     <div class="hp_block_section">
