--- a/edm/src/app/theme/client/header/header.component.html
+++ b/edm/src/app/theme/client/header/header.component.html
@@ -3,8 +3,8 @@
         <div class="open_mobile_menu">
             <img src="../../../../assets/images/navigation.svg">
         </div>
-        <div class="mobile_menu menu_open_animation">
-            <!-- "menu_close_animation" Class while Closing menu panel -->
+        <div class="left_panel mobile_menu panel_open_animation">
+            <!-- "panel_close_animation" Class while Closing menu panel -->
             <div class="mobile_project_logo">
                 <a (click)="redirectUrl('home')">
                     <img src="../../../../assets/images/logo.PNG" alt="EDM Logo" />
