--- a/edm/src/app/theme/client/header/header.component.html
+++ b/edm/src/app/theme/client/header/header.component.html
@@ -43,16 +43,16 @@
     <div class="project_menu">
         <div class="menu_list">
             <p>
-                <a href="#" target="_blank">Store</a>
+                <a routerLink="/product">Store</a>
             </p>
             <p>
-                <a href="#" target="_blank">Genre</a>
+                <a routerLink="/geners">Genre</a>
             </p>
             <p>
-                <a href="#" target="_blank">Custom Track</a>
+                <a routerLink="/product">Custom Track</a>
             </p>
             <p>
-                <a href="#" target="_blank">Services</a>
+                <a routerLink="/service">Services</a>
             </p>
         </div>
         <div class="cart_section">
