service page and service details page design added

--- a/edm/src/app/service/service.component.html
+++ b/edm/src/app/service/service.component.html
@@ -1,3 +1,58 @@
-<div>
- 
+<h2 class="simple_heading">
+    SERVICES
+</h2>
+<div class="service_page">
+    <div class="services_section">
+        <div class="news_sec">
+            <div class="news_data">
+                <img src="../../assets/images/blog1.jpg">
+                <div class="news_content">
+                    <h2>Dummy Short Heading</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="global_btn icon_btn primary_btn">
+                        <span>Read More</span>
+                        <span class="double_right_icon btn_icon"></span>
+                    </a>
+                    <a class="global_btn icon_btn secondary_btn">
+                        <span>Available Producers</span>
+                        <span class="black_user_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="news_sec">
+            <div class="news_data">
+                <img src="../../assets/images/blog2.jpg">
+                <div class="news_content">
+                    <h2>Dummy Short Heading</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="global_btn icon_btn primary_btn">
+                        <span>Read More</span>
+                        <span class="double_right_icon btn_icon"></span>
+                    </a>
+                    <a class="global_btn icon_btn secondary_btn">
+                        <span>Available Producers</span>
+                        <span class="black_user_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="news_sec">
+            <div class="news_data">
+                <img src="../../assets/images/blog3.jpg">
+                <div class="news_content">
+                    <h2>Dummy Short Heading</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <a class="global_btn icon_btn primary_btn">
+                        <span>Read More</span>
+                        <span class="double_right_icon btn_icon"></span>
+                    </a>
+                    <a class="global_btn icon_btn secondary_btn">
+                        <span>Available Producers</span>
+                        <span class="black_user_icon btn_icon"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
